%%{init: {"theme":"default"}}%%

classDiagram
    class Engine {
        +main()
        +generate_trace()
        +print_metrics()
        +run_tests()
        +create_clients()
        +create_gateway(max_queue_size, nb_servers)
    }

    class GatewayImpl {
        +create_servers()
        +create_queue()
        +receive_message()
        +dispatch()
        +_next_server()
    }

    class ClientImpl {
        +send_message()
    }

    class EventImpl {
        +get_event_type()
        +get_message()
        +read_message()
    }

    class MessageImpl {
        +get_destination()
        +get_timestamp()
        +get_source()
        +get_message_id()
    }

    class QueueImpl {
        +enqueue()
        +dequeue()
        +count_messages()
        +read_messages()
    }

    class SchedulerImpl {
        +add_event()
        +get_events()
        +insert_event()
    }

    class ServerImpl {
        +listen()
        +process_message()
    }

    %% Relations
    Engine --> "1" QueueImpl: instantiates
    GatewayImpl --> "1..*" ServerImpl : creates
    GatewayImpl --> "1" QueueImpl : manages
    Engine --> GatewayImpl : instantiates
    Engine --> "1..*" ClientImpl : creates
    EventImpl --> "1" MessageImpl : has
    QueueImpl --> "1..*" MessageImpl : reads
    SchedulerImpl --> EventImpl : insert_event
    ServerImpl --> QueueImpl : accesses

    